# rostu

./: CMakeLists.txt  README.md  package.xml
data/: ball_kalibrasi.txt  kinect_ball_kalibrasi.txt  kinect_field_kalibrasi.txt
kinect_cv/: kinect_ball_calib.py  kinect_cv.py  kinect_depth.py  kinect_field_calib.py
launch/: rostu.launch
opencv_convexhull/: CMakeLists.txt  package.xml
opencv_convexhull/cfg/: calib_value.yaml
opencv_convexhull/src/: convexhull.cpp
rostu_cpp/: README.md
rostu_cpp/data/: ballValue  fieldValue  lineValue
rostu_cpp/rostu_calibration/: CMakeLists.txt.backup  package.xml
rostu_cpp/rostu_cpp/: CMakeLists.txt  package.xml
rostu_cpp/rostu_tracking/: CMakeLists.txt  package.xml
rostu_gs/: CMakeLists.txt
rostu_gs/launch/: rostu_host.launch
rostu_gs/src/: rostu_referee_listener.cpp
rostu_py/: CMakeLists.txt  package.xml
rostu_py/data/: ball_kalibrasi.txt  field_kalibrasi.txt  kinect_ball_kalibrasi.txt  kinect_field_kalibrasi.txt  kinect_line_kalibrasi.txt  line_kalibrasi.txt
rostu_py/kinect/: color.py  depth.py
rostu_py/kinect_cv/: kinect_cv.py  kinect_field_calib.py
rostu_py/src/: ball_calibration.py  cam_pub.py  computer_vision.py  line_calibration.py
rostu_simulation/: CMakeLists.txt  CMakeLists.txt.backup
rostu_simulation/cfg/: amcl_params.yaml  rviz_navigation_teb_multiple.rviz  rviz_navigation_teb_single.rviz
rostu_simulation/launch/: multiple_robot.launch  rostu_simulation.launch  run_multiple_robot.launch
rostu_v2/: CMakeLists.txt
script/: ball_calibration.py  computer_vision.py  field_calibration.py
(+30 files in other folders)
