<?xml version="1.0"?>
<package>
  <name>rostu_cpp</name>
  <version>0.0.1</version>
  <description>
    Rostu Middle Size Robot Soccer
  </description>

  <maintainer email="laxamore@student.telkomuniversity.ac.id">Muhammad Muchlis Kurnia</maintainer>
  <license>Laxamore</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rostu_calibration</run_depend>
  <run_depend>rostu_tracking</run_depend>
  
  <run_depend>kinect2_calibration</run_depend>
  <run_depend>kinect2_viewer</run_depend>
  <run_depend>kinect2_bridge</run_depend>
  <run_depend>kinect2_registration</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
